add_subdirectory(Chipper)
add_subdirectory(Colorization)
add_subdirectory(Crop)
add_subdirectory(Decimation)
add_subdirectory(Ferry)
add_subdirectory(Merge)
add_subdirectory(MortonOrder)
add_subdirectory(Reprojection)
add_subdirectory(Sort)
add_subdirectory(Splitter)
add_subdirectory(Stats)
add_subdirectory(Transformation)

set(PDAL_TARGET_OBJECTS ${PDAL_TARGET_OBJECTS} PARENT_SCOPE)
